istio-teaching/virtualservice/rewrite/vs-http-rewrite-authority.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        regex: "/m.*k"
    rewrite:
      uri: "/productpage"
      authority: bookinfo.com:30468
    route:
    - destination:
        host: productpage
        port:
          number: 9080
